# plugin.video.vrt.nu

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  addon.xml  pyproject.toml  requirements.txt  rustfmt.toml  tox.ini
.github/workflows/: addon-check.yml  ci.yml  release.yml  status.yml
resources/lib/: addon_entry.py  api.py  data.py  kodiutils.py  native_init.py  playerinfo.py  service.py  service_entry.py  tvguide.py  utils.py  vrtplayer.py
resources/lib/_vrtmax/: __init__.pyi  data.pyi  utils.pyi
src/: data.rs  errors.rs  kodi_log.rs  lib.rs  pyconv.rs  settings.rs  utils.rs
tests/: data.rs  kodi_log.rs  run.py  settings.rs  test_kodiutils.py  test_language.py  test_native_init.py  test_proxy.py  test_routing.py  test_settings.py  test_vrtplayer.py  xbmcextra.py  xbmcgui.py
