[package]
name = "vrtmax"
version = "2.6.0"
edition = "2024"
publish = false

[lib]
name = "_vrtmax"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Do NOT add pyo3's `extension-module` feature here — it lives in
# pyproject.toml's [tool.maturin].features. With it on, `cargo test` won't link.
pyo3 = { version = "0.29.0", features = ["abi3-py311"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls", "webpki-roots", "json", "gzip"] }
graphql_client = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
log = "0.4"

[dev-dependencies]
pyo3 = { version = "0.29.0", features = ["auto-initialize"] }
serial_test = "3"


[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
