[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "vrtmax"
version = "2.6.0"
requires-python = ">=3.11"
description = "Native data layer for plugin.video.vrt.nu (Kodi addon)"

[tool.maturin]
module-name = "_vrtmax"
features = ["pyo3/extension-module"]
strip = true

[tool.ty.environment]
extra-paths = ["resources/lib", "tests"]

[tool.pylint.main]
ignore = ["_vrtmax"]
ignored-modules = ["_vrtmax"]

[tool.pylint."messages control"]
max-line-length = 160
disable = [
    "bad-option-value",
    "consider-using-f-string",
    "duplicate-code",  # Integration tests tend to test similar things
    "fixme",  # Allow FIXMEs in code is a useful practice
    "import-outside-toplevel",  # Done on purpose to reduce overhead at startup
    "old-style-class",
    "super-with-arguments",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-branches",
    "too-many-function-args",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-statements",
    "unspecified-encoding"
]
